--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,10 @@
 #
 .DS_Store
 
+#Api Key file
+src/config.js
+src/config2.js
+
 # Xcode
 #
 build/
@@ -162,5 +166,3 @@ RNTester/Pods/*
 .vs
 
 
-#Api Key file
-/src/
