--- a/package.json
+++ b/package.json
@@ -11,15 +11,17 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.7",
-    "@react-native-firebase/app": "^5.0.3",
     "@react-navigation/drawer": "^5.4.0",
     "@react-navigation/native": "^5.1.4",
     "@react-navigation/stack": "^5.2.9",
     "firebase": "^7.13.2",
+    "native-base": "^2.13.12",
     "react": "16.11.0",
-    "react-native": "0.62.0",
+    "react-native": "0.62.2",
+    "react-native-cli": "^2.0.1",
     "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "^1.6.1",
+    "react-native-permissions": "^2.0.10",
     "react-native-reanimated": "^1.7.1",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.4.0",
