--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/native": "^5.1.4",
     "@react-navigation/stack": "^5.2.9",
     "firebase": "^7.13.2",
+    "native-base": "^2.13.12",
     "react": "16.11.0",
     "react-native": "0.62.0",
     "react-native-elements": "^1.2.7",
